# bake-rows

./: README.md  __[[--START--]]__.bat  lib.py  log.yaml  main.py  pyproject.toml  score.py
app/: package-lock.json  package.json  page.html
app/src/: index.ts
server/: main.py  pyproject.toml
vite-project/: package-lock.json  package.json  rollup.config.ts  vite.config.ts
vite-project/src/: index.ts
