[project]
name = "bake-rows"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.10"
dependencies = [
    "fastexcel>=0.13.0",
    "langdetect>=1.0.9",
    "numpy>=2.2.5",
    "polars>=1.27.1",
    "regex>=2024.11.6",
    "sentence-transformers>=4.1.0",
    "streamlit>=1.44.1",
    "watchdog>=6.0.0",
    "xlsxwriter>=3.2.3",
]
